--- a/BSPracaInzynierska/Client/_Imports.razor
+++ b/BSPracaInzynierska/Client/_Imports.razor
@@ -12,6 +12,7 @@
 @using BSPracaInzynierska.Client.Services.GameOneServices
 @using BSPracaInzynierska.Client.Services.BlindGuessGameService
 @using BSPracaInzynierska.Client.Services.GameCreatorService
+@using BSPracaInzynierska.Client.Services.MultiplayerService
 @using BSPracaInzynierska.Client.Shared
 @using BSPracaInzynierska.Shared
 @using Microsoft.AspNetCore.Components.Authorization
