--- a/BSPracaInzynierska/Client/Pages/Counter.razor
+++ b/BSPracaInzynierska/Client/Pages/Counter.razor
@@ -46,7 +46,7 @@
 
     private void IncrementCount()
     {
-        hubConnection.SendAsync("SendMessage", "admin", "user");
+        hubConnection.SendAsync("SendMessage", "admin");
         //currentCount++;
     }
 }
